# tp-project

./: README.md
SeaBattle/: CMakeLists.txt  main.cpp  run.sh
SeaBattle/include/: field.h  game.h  player.h  ship.h
SeaBattle/info/: SeaBattleDiagrams.rar  Архитектура проекта.docx  Сценарии вариантов использования.docx
SeaBattle/src/: CMakeLists.txt  field.cpp  game.cpp  player.cpp  ship.cpp
SeaBattle/tests/: CMakeLists.txt  pos_tests.cpp
